--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".TApp">
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -18,6 +19,7 @@
         </activity>
         <activity android:name=".HandlerBlockTestActivity" />
         <activity android:name=".MakeLeakActivity" />
+        <activity android:name=".activity.FlowLayoutActivity" />
 
         <service android:name="com.tzh.android.TIntentService.TTestIntentService" />
     </application>
