--- a/build.gradle
+++ b/build.gradle
@@ -5,11 +5,11 @@ buildscript {
         google()
         jcenter()
         mavenCentral()
-        
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
-        
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -19,8 +19,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        mavenCentral()
-        
+        maven { url "https://oss.jfrog.org/libs-snapshot" }
     }
 }
 
