--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".MakeLeakActivity" />
         <activity android:name=".activity.FlowLayoutActivity" />
         <activity android:name=".activity.ViewTouchActivity" />
+        <activity android:name="com.tzh.android.bitmap.BitmappoolActivity" />
 
         <service android:name="com.tzh.android.TIntentService.TTestIntentService" />
     </application>
